--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
   
   <footer>
     <div class="logo">
-      <img src="images/logo.svg" alt="logo">
+      <img src="images/white.svg" alt="logo">
     </div>
 
 
