--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     
     <nav class="desktop-nav">
-      <img src="/images/logo.svg" alt="logo">
+      <img src="images/logo.svg" alt="logo">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
